[package]
name = "fuma_rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fuma"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "1.0"
walkdir = "2.5"
urlencoding = "2.1"
chrono = "0.4"
regex = "1.11"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
futures = "0.3"
openssl = { version = "0.10.75", features = ["vendored"] }
